Fix vertical flex align

--- a/src/definitions/elements/step.less
+++ b/src/definitions/elements/step.less
@@ -202,10 +202,10 @@
   overflow: visible;
 }
 .ui.vertical.steps .step {
+  justify-content: flex-start;
   border-radius: @borderRadius;
   padding: @verticalPadding @horizontalPadding;
   border-bottom: @verticalDivider;
-  justify-content: @verticalJustifyContent;
 }
 .ui.vertical.steps .step:first-child {
   padding: @verticalPadding @horizontalPadding;
